Mon Mar 24 15:19:33 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: fix memory leak

Sun Mar 23 20:20:57 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: handle all communications with the server
   through upscli_sendline/readline to prevent blocking on I/O
   calls when the server is not responding (while still allowing
   it a couple of seconds to reply)

Sun Mar 23 20:00:29 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups:
   - changes in the way we tell the UPS to shutdown
   - reformatted hidparser
   - the variable passed to the conversion functions in the HID-to-NUT
     mapping is now a double and not a long anymore (to maintain
     resolution for non-integer values)
   - added some additional parameters and three phase support for the
     mge-hid subdriver

Thu Mar 20 20:11:55 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: missing return statement caused the driver to
   ignore communication failures (will now report properly after three
   consecutive failures)

Tue Mar 18 10:31:42 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * Integrated Power Management (HAL integration)
   - general rework of {dstate,main}-hal.ch, using GMainLoop,
   - done some code cleaning and removal,
   - add support for DBus methods (with Shutdown and SetBeeper),
   - complete the documentation to mention the DBus (RW) interface.
     (backported from trunk, r1356)

Mon Mar 17 10:23:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/bestups: backport from the trunk (r1337) which added
   additional information and fixes 'battery.voltage.nominal'

Sat Mar  8 21:00:07 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel: backport from the trunk (now includes support
   for the CyberPower OP series)

Sat Mar  8 20:01:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsc.c: reverse this change from r1322, that causes upsc